--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mvc.static-path-pattern=/resources/**
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=system
-spring.datasource.password=Zzwjd2780!
+spring.datasource.password=12345
 
 # mybatis 설정 (mapper의 위치 설정, dao 로그 설정)
 mybatis.mapper-locations=mapper/**/*.xml
